--- a/Exercise4-Question.ipynb
+++ b/Exercise4-Question.ipynb
@@ -176,49 +176,55 @@
         "\n",
         "DESIRED_ACCURACY = 0.999\n",
         "\n",
-        "class myCallback(# your code):\n",
-        "      # Your Code\n",
+        "class myCallback(tf.keras.callbacks.Callback):\n",
+        "    def on_epoch_end(self, epoch, logs={}):\n",
+        "        if logs.get('accuracy') > DESIRED_ACCURACY:\n",
+        "            print(f\"\\nДостигнута точность {DESIRED_ACCURACY*100}%, обучение прерывается!\")\n",
+        "            self.model.stop_training = True\n",
         "\n",
         "callbacks = myCallback()\n",
         "\n",
-        "# Этот блок кода должен задать и скомпилировать модель. Пожалуйста, имейте в виду, что размер изображений 150 X 150\n",
+        "# Создание модели\n",
         "model = tf.keras.models.Sequential([\n",
-        "    # Здесь ваш код\n",
+        "    tf.keras.layers.Conv2D(16, (3,3), activation='relu', input_shape=(150, 150, 3)),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(32, (3,3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "    tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(512, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
         "])\n",
         "\n",
+        "# Компиляция модели\n",
         "from tensorflow.keras.optimizers import RMSprop\n",
         "\n",
-        "model.compile(# здесь ваш код #)\n",
+        "model.compile(loss='binary_crossentropy',\n",
+        "              optimizer=RMSprop(learning_rate=0.001),\n",
+        "              metrics=['accuracy'])\n",
         "\n",
-        "\n",
-        "  # Этот блок кода должен создать экземпляр ImageDataGenerator с именем train_datagen\n",
-        "  # и train_generator, вызовом train_datagen.flow_from_directory\n",
-        "\n",
+        "# Создание генератора изображений\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "\n",
-        "train_datagen = # Your Code Here\n",
+        "train_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
-        "# Используйте target_size  150 X 150.\n",
         "train_generator = train_datagen.flow_from_directory(\n",
-        "    # Здесь ваш код #)\n",
-        "# ожидаемая строка вывода: 'Found 80 images belonging to 2 classes'\n",
+        "    '/tmp/h-or-s',  # Это исходный каталог\n",
+        "    target_size=(150, 150),\n",
+        "    batch_size=10,\n",
+        "    class_mode='binary')\n",
         "\n",
-        "# model fitting\n",
+        "# Ожидаемая строка вывода: 'Found 80 images belonging to 2 classes'\n",
+        "\n",
+        "# Обучение модели\n",
         "history = model.fit(\n",
-        "      # Ваш код здесь\n",
-        "      )\n",
-        "\n",
-        "# ожидаемая строка вывода: \"Достигнута точность 99.9%, обучение прерывается!\"\n"
+        "    train_generator,\n",
+        "    steps_per_epoch=8,  # 80 изображений / batch_size=10\n",
+        "    epochs=15,\n",
+        "    verbose=1,\n",
+        "    callbacks=[callbacks])\n"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "iOPLvQ5eQk0u"
-      },
       "execution_count": null,
       "outputs": []
     },
